--- a/application/templates/selfDevelopmentTools/todo_landing.html
+++ b/application/templates/selfDevelopmentTools/todo_landing.html
@@ -34,6 +34,7 @@
       </div>
 
         <script>
+          localStorage.setItem("score", 54);
           function manage_todo() {
             var xhttp = new XMLHttpRequest();
             xhttp.onreadystatechange = function() {
