--- a/application/templates/selfDevelopmentTools/todo_progress.html
+++ b/application/templates/selfDevelopmentTools/todo_progress.html
@@ -1,17 +1,17 @@
     {% extends "layout.html" %}
     
     {% block content %}
-      <div class="text-center">
-        <br>
-        <span id=LastWeek style="font-size: 28.8px; color: white;background-color: #4CAF50; border-radius: 5px">Last 7 Days</span>
-        <span id=LastMonth style="font-size: 28.8px;">|</span>
-        <span id=LastMonth onclick = "call_month_analysis()" style="font-size: 28.8px;">Last 12 Months</span>
-        <span id=LastMonth style="font-size: 28.8px;">|</span>
-        <span id=LastYear style="font-size: 28.8px;">Last 5 years</span>
-
-        <!-- <a href="{{ url_for('todo_all')}}" style="font-size: 28.8px; color: font-size: 28.8px; color: #4CAF50;">Check All of your Tasks here.</a> -->
-        <br>
-      </div>
+{#      <div class="text-center">#}
+{#        <br>#}
+{#        <span id=LastWeek style="font-size: 28.8px; color: white;background-color: #4CAF50; border-radius: 5px">Last 7 Days</span>#}
+{#        <span id=LastMonth style="font-size: 28.8px;">|</span>#}
+{#        <span id=LastMonth onclick = "call_month_analysis()" style="font-size: 28.8px;">Last 12 Months</span>#}
+{#        <span id=LastMonth style="font-size: 28.8px;">|</span>#}
+{#        <span id=LastYear style="font-size: 28.8px;">Last 5 years</span>#}
+{##}
+{#        <!-- <a href="{{ url_for('todo_all')}}" style="font-size: 28.8px; color: font-size: 28.8px; color: #4CAF50;">Check All of your Tasks here.</a> -->#}
+{#        <br>#}
+{#      </div>#}
       <div class="graphs_box_container">
           
           <div class="graphs_task_box">
@@ -36,25 +36,25 @@
               <canvas id="piechart"></canvas>
             </div>
           </div>
-          <div class="graphs_task_box">
-            <br>
-            <h4 class="text-center">Distribution of your Completed Tasks by number of days it took to complete.</h4>
-            <!-- <div class="chart-container" style="position: relative; height:100px; width:100px; text-align: center;"> -->
-            <br>
-            <div>
-              <canvas id="completedtasksbarchart"></canvas>
-            </div>
-          </div>
-          <div class="graphs_task_box">
-            <br>
-            <h4 class="text-center">Distribution of your Inprogress Tasks by number of days since it was started.</h4>
-            <!-- <a href="{{ url_for('todo')}}" style="font-size: 28.8px; color: #4CAF50;">Check your Inprogress Tasks</a> -->
-            <!-- <div class="chart-container" style="position: relative; height:100px; width:100px; text-align: center;"> -->
-            <br>
-            <div>
-              <canvas id="inprogresstasksbarchart"></canvas>
-            </div>
-          </div>
+{#          <div class="graphs_task_box">#}
+{#            <br>#}
+{#            <h4 class="text-center">Distribution of your Completed Tasks by number of days it took to complete.</h4>#}
+{#            <!-- <div class="chart-container" style="position: relative; height:100px; width:100px; text-align: center;"> -->#}
+{#            <br>#}
+{#            <div>#}
+{#              <canvas id="completedtasksbarchart"></canvas>#}
+{#            </div>#}
+{#          </div>#}
+{#          <div class="graphs_task_box">#}
+{#            <br>#}
+{#            <h4 class="text-center">Distribution of your Inprogress Tasks by number of days since it was started.</h4>#}
+{#            <!-- <a href="{{ url_for('todo')}}" style="font-size: 28.8px; color: #4CAF50;">Check your Inprogress Tasks</a> -->#}
+{#            <!-- <div class="chart-container" style="position: relative; height:100px; width:100px; text-align: center;"> -->#}
+{#            <br>#}
+{#            <div>#}
+{#              <canvas id="inprogresstasksbarchart"></canvas>#}
+{#            </div>#}
+{#          </div>#}
             
             <!-- <canvas class="text-center" style="height: 300px;width: 300px" id="piechart" ></canvas> -->
           <!-- </div> -->
