--- a/application/templates/selfDevelopmentTools/todo_nav.html
+++ b/application/templates/selfDevelopmentTools/todo_nav.html
@@ -36,7 +36,7 @@
 				  </form>
 				</div>
 				<div id="overlay" onclick="off_overlay()">
-  					<div id="score_text">Null</div>
+  					<div id="score_text"></div>
 				</div>
             </div>
 
@@ -54,6 +54,7 @@
 				  	document.getElementById("addnewtaskbutton").innerHTML = "Close Add Form"
 				  }
 				}
+
 				function off_overlay() {
 				  document.getElementById("overlay").style.display = "none";
 				}
