--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -25,8 +25,6 @@
 
 <div class="container-fluid main" style="{% if not 1 %}background-image: url('static/images/night_fury_PNG59_0.12Opacity.png'){% endif %};background-size: 100% 100%;height:100%;">
 
-    <!-- <h3>  </h3> -->
-
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             {% for category, message in messages %}
@@ -43,8 +41,8 @@
     {% endblock %}
 
 </div>
-<!-- <div class="footer">
+<div class="footer">
     {% include "includes/footer.html" %}
-</div> -->
+</div>
 </body>
 </html>    
